# TallerFlowMatching

./: 3_flow_matching.ipynb  4_galaxy_images_run.ipynb  PropuestaLabFlowMatching.ipynb  PropuestaLabFlowMatching_Estudiante.ipynb  main.py  pyproject.toml
Taller Conjunto/: Publicar Finance - 3_diffusion_models (1).ipynb  Solución 1 Finance - 3_diffusion_models (1).ipynb  Solución 2 Finance - 3_diffusion_models (1).ipynb  TallerConjunto_FMyDM_Estudiante.ipynb  TallerConjunto_FMyDM_Solucion.ipynb  TallerConjunto_Solucion.ipynb
